# java2rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
resources/: Main.java
src/: lib.rs  main.rs
src/codegen/: mod.rs
src/ir/: block.rs  class.rs  expression.rs  method.rs  mod.rs  modifier.rs  program.rs  statement.rs  type.rs
src/java/: blocks.rs  classes.rs  expressions.rs  fields.rs  identifiers.rs  literals.rs  methods.rs  mod.rs  modifiers.rs  programs.rs  types.rs
tests/: common.rs  common_tests.rs  simple.rs
tests/common/: mod.rs
tests/resources/common/: panic.java  panic.rs
tests/resources/simple/: main_class.java  main_class.rs  noargs_constructor.java  noargs_constructor.rs  noargs_constructor_with_main_first.java  noargs_constructor_with_main_last.java  noargs_constructor_with_main_last.rs
