[package]
name = "java2rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
tree-sitter = "0.20.3"
tree-sitter-java = "0.19.0"
syn = "1.0.86"
quote = "1.0.15"
proc-macro2 = { version = "1.0.32", default-features = false }
prettyplease = "0.1.2"
pretty_assertions = "1.0.0"
